<resources>
    <string name="app_name">Tasty Baking</string>
    <string name="ingredients">ingredients</string>
    <string name="steps">steps</string>
    <string name="servings">servings</string>
    <string name="recipe_picture">recipe picture</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_step_description">Recipe Introduction</string>
    <string name="ingredient_name_sample">cake flour</string>
    <string name="quantity_sample">1.5</string>
    <string name="measure_sample">CUP</string>
    <string name="prev_step">&#60; prev step</string>
    <string name="next_step">next step &#62;</string>
    <string name="ingredients_short">ingrd</string>
    <string name="step_details">Step details</string>
    <string name="play_button">play button</string>
    <string name="pause_button">pause button</string>
    <string name="recipe_video_thumbnail">Recipe video thumbnail</string>
    <string name="loading_indicator">Loading indicator</string>
    <string name="appwidget_prefix_default">prefix_</string>
    <string name="by_app_name">by TastyBaking</string>
</resources>
