<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_ingredient_widget_item"
    style="@style/ingredientItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/ingredient_widget_item_margin"
    android:background="#FFF"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_ingredient_widget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/ingredient_widget_title_margin"
        android:layout_marginRight="@dimen/ingredient_widget_title_margin"
        android:layout_toLeftOf="@+id/tv_ingredient_widget_quantity"
        android:layout_toStartOf="@+id/tv_ingredient_widget_quantity"
        tools:text="@string/ingredient_name_sample" />

    <TextView
        android:id="@+id/tv_ingredient_widget_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ingredient_widget_quantity_margin"
        android:layout_marginRight="@dimen/ingredient_widget_quantity_margin"
        android:layout_toLeftOf="@+id/tv_ingredient_widget_measure"
        android:layout_toStartOf="@+id/tv_ingredient_widget_measure"
        tools:text="@string/quantity_sample" />

    <TextView
        android:id="@+id/tv_ingredient_widget_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="@string/measure_sample" />

</RelativeLayout>