<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/fl_exo_holder"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <FrameLayout
                    android:id="@+id/fl_exo_thumbnail_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/iv_recipe_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:contentDescription="@string/recipe_video_thumbnail"
                        android:visibility="visible"
                        tools:src="@drawable/img_food_placeholder" />

                    <ImageButton
                        android:id="@+id/ib_recipe_play_icon"
                        style="@style/ExoMediaButton.Play"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:background="@drawable/shape_round_corner"
                        android:contentDescription="@string/recipe_video_thumbnail"
                        android:visibility="gone" />

                </FrameLayout>

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/exo_step_player"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:visibility="gone" />

            </FrameLayout>


            <TextView
                android:id="@+id/tv_recipe_name"
                style="@style/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_exo_holder"
                tools:text="Nutella Pie" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_number_holder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_recipe_name"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_recipe_name"
                app:layout_constraintTop_toTopOf="@+id/tv_recipe_name">

                <TextView
                    android:id="@+id/tv_ingredient_label"
                    style="@style/cardLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="ingredients" />

                <TextView
                    android:id="@+id/tv_ingredient_num"
                    style="@style/cardNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_ingredient_label"
                    app:layout_constraintStart_toStartOf="@+id/tv_ingredient_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_label"
                    tools:text="8" />

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="@+id/cl_number_holder"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cl_number_holder"
                app:layout_constraintTop_toTopOf="@+id/cl_number_holder">

                <TextView
                    android:id="@+id/tv_steps_label"
                    style="@style/cardLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="steps" />

                <TextView
                    android:id="@+id/tv_steps_num"
                    style="@style/cardNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_steps_label"
                    app:layout_constraintStart_toStartOf="@+id/tv_steps_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_steps_label"
                    tools:text="10" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/tv_servings_label"
                    style="@style/cardLabels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/servings"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="servings" />

                <TextView
                    android:id="@+id/tv_servings_num"
                    style="@style/cardNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_servings_label"
                    app:layout_constraintStart_toStartOf="@+id/tv_servings_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_servings_label"
                    tools:text="4" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</layout>

